# PyPi-Tutorial

./: README.md
package_name/: LICENSE  MANIFEST.in  README.md  pyproject.toml
package_name/src/Decode_Things.egg-info/: PKG-INFO  SOURCES.txt
package_name/src/Package_Name.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
package_name/src/Package_Name_iuhsdaa.egg-info/: PKG-INFO  SOURCES.txt
package_name/src/package_name/: Modul_1.py  Modul_2.py
tutorial/: Tutorial.md
